[fix][slider] Make slider appear above menu on mobile

--- a/app/assets/stylesheets/redesign/_flash_slider.css.scss
+++ b/app/assets/stylesheets/redesign/_flash_slider.css.scss
@@ -46,7 +46,11 @@
         outline: none;
       }      
     }
+  }
 
-
+  @media screen and (max-width: 991px){ 
+    .vex-content {
+      margin-bottom:62px;    
+    }
   }
 }
